<resources>
    <string name="app_name">Teoria de Colas</string>
    <string name="action_settings">Configurar</string>
    <string name="action_help">Información</string>
    <string name="landa">Lambda(λ)</string>
    <string name="mu">Mu(μ)</string>
    <string name="calcular">CALCULAR</string>
    <string name="textview"></string>
    <string name="probabilidades">Probabilidades:</string>
    <string name="tiempo_medio_de_espera">Tiempo medio de espera:</string>
    <string name="n_mero_esperado_de_unidades">Número esperado de unidades:</string>
    <string name="m_m_1"><font color="#22424B" size="46">M/M/1</font>\n\<font color="#4E7367" size="18">Población infinita, capacidad del sistema infinito, un canal de servicio.</font></string>
    <string name="m_m_s"><font color="#22424B" size="46">M/M/S</font>\n\<font color="#4E7367" size="18">Población infinita, capacidad del sistema infinito, S canales de servicio.</font></string>
    <string name="m_m_1_c"><font color="#22424B" size="46">M/M/1/C</font>\n\<font color="#4E7367" size="18">Población de tamaño C, capacidad del sistema infinito, un canal de servicio.</font></string>
    <string name="m_m_s_c"><font color="#22424B" size="46">M/M/S/C</font>\n\<font color="#4E7367" size="18">Población de tamaño C, capacidad del sistema infinito, S canales de servicio.</font></string>
    <string name="m_m_1_K"><font color="#22424B" size="46">M/M/1/K</font>\n\<font color="#4E7367" size="18">Población infinita, capacidad del sistema limitado a K, un canal de servicio.</font></string>
    <string name="m_m_s_K"><font color="#22424B" size="46">M/M/S/K</font>\n\<font color="#4E7367" size="18">Población infinita, capacidad del sistema limitado a K, S canales de servicio.</font></string>
    <string name="tama_o_de_la_poblaci_n">Tamaño de la población</string>
    <string name="l_mite_del_sistema">Límite del sistema</string>
    <string name="canales_de_servicio">Canales de servicio</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
