<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uriel.myapplication.Main3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#192B38">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/boton"
                android:text="@string/m_m_1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/boton"
                android:text="@string/m_m_s"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/boton"
                android:text="@string/m_m_1_c"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/boton"
                android:text="@string/m_m_s_c"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/boton"
                android:text="@string/m_m_1_K"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/boton"
                android:text="@string/m_m_s_K"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
