<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uriel.myapplication.MM1K"
    android:background="@color/boton">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/l_mite_del_sistema"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="261dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/landa"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="64dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText3"
            android:layout_below="@+id/textView13"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="304dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/mu"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="150dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText5"
            android:layout_below="@+id/textView14"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="number"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="195dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
